force-app/main/default/objects/Payitem_Leave_Request__c/Payitem_Leave_Request__c.object-meta.xml
<CustomObject>
    <description>This is a junction object between Leave Request and PayItem. It holds the unpaid leaves for a particular month.</description>
    <label>Payitem Leave Request</label>
    <nameField>
        <displayFormat>PLR-{0000}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payitem Leave Requests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>