force-app/main/default/objects/Payitem_Leave_Request__c/fields/Leave_Request__c.field-meta.xml
<CustomField>
    <fullName>Leave_Request__c</fullName>
    <label>Leave Request</label>
    <referenceTo>Leave_Request__c</referenceTo>
    <relationshipLabel>Payitem Leave Requests</relationshipLabel>
    <relationshipName>Payitem_Leave_Requests</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>