force-app/main/default/objects/Payitem_Leave_Request__c/fields/Unpaid_Leaves__c.field-meta.xml
<CustomField>
    <fullName>Unpaid_Leaves__c</fullName>
    <label># Unpaid Leaves</label>
    <precision>3</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>